--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "parcel": "^2.10.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.33",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.1"
   },
   "dependencies": {
     "browserslist": "last 2 versions",
