--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
     "browserslist": "last 2 versions",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1"
   },
   "scripts": {
