--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "devDependencies": {
-    "@babel/core": "^7.23.6",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@testing-library/react": "^14.2.1",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.10.3",
     "postcss": "^8.4.33",
     "process": "^0.11.10",
@@ -11,6 +16,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "browserslist": "last 2 versions",
+    "express": "^4.18.3",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -21,5 +28,12 @@
     "build": "parcel build index.html",
     "test": "jest"
   },
-  "homepage": "."
+  "homepage": "http://.",
+  "name": "craveexpress",
+  "description": "/*\r Header \r -Logo\r -Nav Items",
+  "version": "1.0.0",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
