--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@reduxjs/toolkit": "^2.1.0",
     "browserslist": "last 2 versions",
     "express": "^4.18.3",
+    "lucide-react": "^0.462.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "typewriter-effect": "^2.21.0"
   },
   "scripts": {
     "start": "parcel index.html",
@@ -32,7 +35,7 @@
   "name": "craveexpress",
   "description": "/*\r Header \r -Logo\r -Nav Items",
   "version": "1.0.0",
-  "main": "babel.config.html",
+  "main": "babel.config.js",
   "keywords": [],
   "author": "",
   "license": "ISC"
