--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
   },
   "homepage": "http://.",
   "name": "craveexpress",
-  "description": "/*\r Header \r -Logo\r -Nav Items",
+  "description": "A Swiggy-inspired food delivery app",
   "version": "1.0.0",
-  "main": "babel.config.js",
-  "keywords": [],
+  "keywords": ["food-delivery", "react", "tailwindcss"],
   "author": "",
   "license": "ISC"
 }
